--- a/VardForAlla.api/appsettings.json
+++ b/VardForAlla.api/appsettings.json
@@ -2,7 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS04;Database=VardForAllaDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-
+  "Jwt": {
+    "Key": "DinSuperHemligaNyckelSomMåsteVaraMinst32TeckenLång!123456789",
+    "Issuer": "VardForAlla",
+    "Audience": "VardForAllaUsers"
+  },
+  "App": {
+    "BaseUrl": "http://localhost:5066"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
