--- a/VardForAlla.api/appsettings.json
+++ b/VardForAlla.api/appsettings.json
@@ -8,7 +8,7 @@
     "Audience": "VardForAllaUsers"
   },
   "App": {
-    "BaseUrl": "http://localhost:5066"
+    "BaseUrl": "https://localhost:7144"
   },
   "Logging": {
     "LogLevel": {
